# kanso

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONVENTIONS.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  justfile  lefthook.yml
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/extensions/: package-lock.json  package.json
.github/extensions/_shared/kanso-client/: README.md  client.mjs  index.mjs  package.json  resources.mjs
.github/extensions/kanso/: README.md  extension.mjs  package-lock.json  package.json
.github/extensions/kanso-mcp/: README.md  package.json
.github/extensions/kanso-mcp/lib/: render.mjs  server.mjs  server.test.mjs
.github/extensions/kanso/lib/: client.mjs  client.test.mjs  port.mjs  port.test.mjs  tools.mjs  tools.test.mjs
.github/workflows/: ci.yml
crates/dto-contract-gen/: Cargo.toml
crates/dto-contract-gen/src/: main.rs
crates/kanso-api/: Cargo.toml
crates/kanso-api/examples/: smoke_server.rs
crates/kanso-api/src/: dto.rs  error.rs  lib.rs
crates/kanso-api/src/handlers/: board.rs  card.rs  column.rs  mod.rs  tag.rs
crates/kanso-api/tests/: cards_roundtrip.rs  http_roundtrip.rs
crates/kanso-cli-ext/: Cargo.toml
crates/kanso-cli-ext/src/: main.rs
crates/kanso-core/: Cargo.toml
crates/kanso-core/src/: db.rs  error.rs  lib.rs  positioning.rs
crates/kanso-core/src/domain/: board.rs  card.rs  column.rs  mod.rs  tag.rs
crates/kanso-core/src/repo/: board.rs  card.rs  column.rs  mod.rs  tag.rs
crates/kanso-core/tests/: repo.rs
crates/kanso-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
crates/kanso-tauri/capabilities/: default.json
crates/kanso-tauri/icons/: icon.icns
crates/kanso-tauri/scripts/: ui.sh
crates/kanso-tauri/src/: backup.rs  error.rs  ext_install.rs  main.rs  mcp_hosts.rs  snapshot.rs  time.rs
crates/kanso-tauri/src/commands/: board.rs  card.rs  column.rs  mod.rs  tag.rs
crates/kanso-tauri/tests/: bundle_parity.rs
docs/: agent-surface.md  architecture.md  troubleshooting.md
extensions/: package-lock.json
extensions/_shared/kanso-client/: README.md  client.mjs  client.test.mjs  crud.mjs  crud.test.mjs  dto-contract.generated.mjs  dto-contract.mjs  index.mjs  package.json  resources.mjs  resources.test.mjs  tools.mjs  tools.test.mjs
extensions/kanso/: README.md  extension.mjs  handlers.mjs  package.json  schema-contract.test.mjs  tools.mjs  tools.test.mjs
extensions/kanso-mcp/: README.md  package.json
extensions/kanso-mcp/lib/: render.mjs  render.test.mjs  schema-contract.test.mjs  server.mjs  server.test.mjs
migrations/: 0001_initial.sql  0002_body_markdown.sql  0003_ember_column_colors.sql
scripts/: phase1-smoke.sh
ui/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/eslint-rules/: no-unstable-zustand-selector.js
ui/eslint-rules/__tests__/: no-unstable-zustand-selector.fixtures.ts
ui/scripts/: check-bundle-size.mjs  prebuild-editor-dev.d.mts  prebuild-editor-dev.mjs
ui/src/: App.tsx  CardsPanel.tsx  CliExtConsentModal.tsx  Dialog.tsx  ErrorBoundary.tsx  ShortcutsOverlay.tsx  StatusBar.tsx  blocksuite-stub.ts  main.tsx  useShortcutsHotkey.ts
ui/src/__tests__/: CliExtConsentModal.test.tsx  ErrorBoundary.test.tsx  editor.test.ts
ui/src/connect/: ConnectAppsPanel.test.tsx  ConnectAppsPanel.tsx
ui/src/editor/: EditorDemo.tsx  SlashCommand.tsx  SlashMenu.tsx  affine-editor-container.ts  blocksuite-theme.css  extensions.ts  index.ts  internal.ts  plaintext.ts  types.ts
ui/src/editor-lab/: BracketTaskItem.ts  Playground.tsx  lowlight.ts  seed.ts  slashItems.ts  tiptap.css
ui/src/editor/__tests__/: blocksuite-theme.test.ts
ui/src/kanban/: AddCardInline.tsx  AddColumnTile.tsx  BoardFilterBar.tsx  BoardMetaStrip.tsx  BoardSwitcher.tsx  Card.tsx  CardBodyEditor.tsx  CardDetailDrawer.tsx  CardDetailModal.tsx  CardHeaderMenu.tsx  ColorPicker.tsx  Column.tsx  ColumnHeaderMenu.tsx  ColumnList.tsx  DueBadge.tsx  DueDateEditor.tsx  KanbanBoard.tsx  ManageBoardsDrawer.tsx  ManageTagsDrawer.tsx  SearchPalette.tsx  TagChips.tsx  TagPickerPopover.tsx  base64.ts  columnDragEnd.ts  dragEnd.ts  kanban.css  tagChipStyle.ts  types.ts
ui/src/kanban/__tests__/: BoardFilterBar.test.tsx  BoardMetaStrip.test.tsx  CardBodyEditor.pending-debounce.test.tsx  CardBodyEditor.unmount.test.tsx  CardDetailModal.race.test.tsx  CardDetailModal.test.tsx  Column.filter.test.tsx  Column.header.test.tsx  DueBadge.test.tsx  DueDateEditor.test.tsx  SearchPalette.test.tsx  TagChips.test.tsx  TagPickerPopover.newTagAppears.test.tsx  TagPickerPopover.test.tsx  base64.test.ts  client.test.ts  columnDragEnd.test.ts  computeAnchors.test.ts  dragAnchors.integration.test.ts  resolveDragEnd.test.ts  tagChipStyle.test.ts  useCmdK.test.tsx  useDebouncedSave.test.ts  useKanbanStore.boards.test.ts  useKanbanStore.filter.test.ts  useKanbanStore.openCardOnBoard.test.ts  useKanbanStore.race.test.ts  useKanbanStore.staleLoad.test.ts  useKanbanStore.tags.test.ts
ui/src/kanban/api/: client.ts
ui/src/kanban/hooks/: useCmdK.ts  useDebouncedSave.ts  useKanbanStore.ts
ui/src/quick-add/: QuickAddModal.tsx  useQuickAddOpenEvent.ts
ui/src/quick-add/__tests__/: QuickAddModal.test.tsx
ui/src/styles/: app.css
ui/src/theme/: ThemeToggle.tsx  useTheme.ts
ui/src/theme/__tests__/: ThemeToggle.test.tsx  useTheme.test.ts
