[package]
name = "kanso-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = "0.4"
rand = "0.8"
base64 = { workspace = true }
sqlx = { workspace = true }
kanso-core = { path = "../kanso-core" }
kanso-api = { path = "../kanso-api" }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
fs2 = "0.4"
wait-timeout = "0.2"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
