[package]
name = "kanso-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
# build.rs stages extensions/ (with a real npm install) into
# resources/extensions/. Keep cargo's package-fingerprint scanner out
# of there so it doesn't race with the build script mutating
# node_modules and bail with `failed to read directory`.
exclude = ["resources/**"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = "0.4"
rand = "0.8"
base64 = { workspace = true }
sqlx = { workspace = true }
kanso-core = { path = "../kanso-core" }
kanso-api = { path = "../kanso-api" }
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
fs2 = "0.4"
wait-timeout = "0.2"
tauri-plugin-window-state = "2.4.1"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
